<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/HEX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/hex"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/HEX"
        android:layout_alignLeft="@+id/HEX"
        android:layout_marginBottom="5dp"
        android:text="@string/B"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/B"
        android:layout_alignLeft="@+id/B"
        android:layout_marginBottom="5dp"
        android:text="@string/G"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/G"
        android:layout_alignLeft="@+id/G"
        android:layout_marginBottom="5dp"
        android:text="@string/R"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/G"
        android:layout_toLeftOf="@+id/editB"
        android:max="255"
        android:progress="127" 
        android:layout_toRightOf="@+id/G" />

    <SeekBar
        android:id="@+id/seekBarB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarG"
        android:layout_alignRight="@+id/seekBarG"
        android:max="255"
        android:progress="127" 
        android:layout_below="@+id/G" />

    <SeekBar
        android:id="@+id/seekBarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/R"
        android:layout_toLeftOf="@+id/editG"
        android:layout_toRightOf="@+id/G"
        android:max="255"
        android:progress="127" />

    <TextView
        android:id="@+id/editR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R"
        android:layout_alignBottom="@+id/R"
        android:layout_toRightOf="@+id/seekBarR"
        android:ems="3"/>

    <TextView
        android:id="@+id/editG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/G"
        android:layout_alignBottom="@+id/G"
        android:layout_toRightOf="@+id/seekBarG"
        android:ems="3" />

    <TextView
        android:id="@+id/editB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/B"
        android:layout_alignBottom="@+id/B"
        android:layout_alignParentRight="true"
        android:ems="3"/>
    <TextView
        android:id="@+id/editAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/alpha"
        android:layout_alignBottom="@+id/alpha"
        android:layout_alignParentRight="true"
        android:ems="3"/>
    <TextView
        android:id="@+id/displayHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/HEX"
        android:layout_toRightOf="@+id/HEX"
        android:layout_alignBottom="@+id/HEX"
        android:text="@string/displayHex"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <TextView
        android:id="@+id/alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/R"
        android:layout_alignLeft="@+id/R"
        android:layout_marginBottom="5dp"
        android:text="@string/alpha"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBarAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/alpha"
        android:layout_alignLeft="@+id/seekBarR"
        android:layout_alignRight="@+id/seekBarR" 
        android:max="255"
        android:progress="255" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/color"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/test"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/test"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <View
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/seekBarAlpha"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>